Fix the z-index of the limit height toggle

--- a/core-bundle/contao/themes/flexible/styles/main.css
+++ b/core-bundle/contao/themes/flexible/styles/main.css
@@ -1661,6 +1661,7 @@ table.tl_listing {
 	position: absolute;
 	bottom: 0;
 	left: 0;
+	z-index: 1;
 	background: var(--content-bg);
 	line-height: 11px;
 	text-align: center;
